# NLP-SE314m-Project-M2M-Translation

backend/: Model.py  pyproject.toml  src.py
backend/m2m_translation_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.js  Footer.css  Footer.jsx  Header.css  Header.jsx
frontend/src/Components/: FlipButton.css  FlipButton.jsx  InputPanel.css  InputPanel.jsx  LanguageTab.css  LanguageTab.jsx  OutputPanel.css  OutputPanel.jsx  TranslatorContainer.css  TranslatorContainer.jsx
