[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m2m-translation-api"
version = "1.0.0"
description = "Many-to-Many Translation API for Hindi and English using m-BART"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "transformers==4.35.2",
    "torch>=2.2.0",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "sentencepiece>=0.1.99",
    "protobuf>=4.24.0",
]

[tool.setuptools]
py-modules = ["Model", "src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"
